--- a/index.htm
+++ b/index.htm
@@ -6,20 +6,66 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>MaticPool Interface</h1>
-    <h2>Deposit Matic</h2>
-    <form id="deposit-form">
-      <input type="number" id="deposit-amount" placeholder="Amount" min="0" />
-      <button type="submit">Deposit</button>
-    </form>
-    <h2>Withdraw Matic</h2>
-    <form id="withdraw-form">
-      <input type="number" id="withdraw-amount" placeholder="Amount" min="0" />
-      <button type="submit">Withdraw</button>
-    </form>
-    <h2>Claim Dividend</h2>
-    <button id="claim-button">Claim</button>
-    <div id="message"></div>
+    <div class="container">
+      <h1 class="title">MaticPool Interface</h1>
+      <div class="box">
+        <h2 class="subtitle">Deposit Matic</h2>
+        <form id="deposit-form" class="form">
+          <div class="form-control">
+            <label for="deposit-amount">Amount</label>
+            <input type="number" id="deposit-amount" placeholder="Amount" min="0" />
+          </div>
+          <button class="button" type="submit">Deposit</button>
+        </form>
+      </div>
+      <div class="box">
+        <h2 class="subtitle">Withdraw Matic</h2>
+        <form id="withdraw-form" class="form">
+          <div class="form-control">
+            <label for="withdraw-amount">Amount</label>
+            <input type="number" id="withdraw-amount" placeholder="Amount" min="0" />
+          </div>
+          <button class="button" type="submit">Withdraw</button>
+        </form>
+      </div>
+      <div class="box">
+        <h2 class="subtitle">Claim Dividend</h2>
+        <button id="claim-button" class="button">Claim</button>
+        <div id="message"></div>
+      </div>
+      <div class="box">
+        <h2 class="subtitle">Account Balance</h2>
+        <p id="balance"></p>
+      </div>
+      <div class="box">
+        <h2 class="subtitle">Last Dividend Claim</h2>
+        <p id="last-dividend-claim"></p>
+      </div>
+      <div class="box">
+        <h2 class="subtitle">Total Matic in Pool</h2>
+        <p id="total-matic"></p>
+      </div>
+      <div class="box">
+        <h2 class="subtitle">Treasury Pool</h2>
+        <p id="treasury-pool"></p>
+      </div>
+      <div class="box">
+        <h2 class="subtitle">Dividend Payout Amount</h2>
+        <p id="payout-amount"></p>
+      </div>
+      <div class="box">
+        <h2 class="subtitle">Tax Rate</h2>
+        <p id="tax-rate"></p>
+      </div>
+      <div class="box">
+        <h2 class="subtitle">Last Dividend Payout</h2>
+        <p id="last-dividend-payout"></p>
+      </div>
+      <div class="box">
+        <h2 class="subtitle">Total Dividends Paid</h2>
+        <p id="total-dividends"></p>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
