--- a/index.htm
+++ b/index.htm
@@ -8,25 +8,41 @@
 </head>
 <body>
     <h1>USDT Smart Contract</h1>
-    <div class="container">
-        <h2>Depositar USDT</h2>
-        <input type="number" id="depositAmount" placeholder="Cantidad">
-        <button onclick="deposit()">Depositar</button>
-    </div>
-    <div class="container">
-        <h2>Retirar USDT</h2>
-        <input type="number" id="withdrawAmount" placeholder="Cantidad">
-        <button onclick="withdraw()">Retirar</button>
-    </div>
-    <div class="container">
-        <h2>Reclamar recompensa</h2>
-        <button onclick="claimReward()">Reclamar</button>
-    </div>
-    <div class="container">
-        <h2>Realizar oferta en subasta</h2>
-        <input type="number" id="bidAmount" placeholder="Cantidad">
-        <button onclick="bid()">Ofertar</button>
-    </div>
+    <section class="stats">
+        <div class="stat">
+            <h2>Tu balance</h2>
+            <p id="userBalance">0 USDT</p>
+        </div>
+        <div class="stat">
+            <h2>Pool del Tesoro</h2>
+            <p id="treasuryPool">0 USDT</p>
+        </div>
+        <div class="stat">
+            <h2>Pool de Subasta</h2>
+            <p id="auctionPool">0 USDT</p>
+        </div>
+    </section>
+    <section class="actions">
+        <div class="container">
+            <h2>Depositar USDT</h2>
+            <input type="number" id="depositAmount" placeholder="Cantidad">
+            <button onclick="deposit()">Depositar</button>
+        </div>
+        <div class="container">
+            <h2>Retirar USDT</h2>
+            <input type="number" id="withdrawAmount" placeholder="Cantidad">
+            <button onclick="withdraw()">Retirar</button>
+        </div>
+        <div class="container">
+            <h2>Reclamar recompensa</h2>
+            <button onclick="claimReward()">Reclamar</button>
+        </div>
+        <div class="container">
+            <h2>Realizar oferta en subasta</h2>
+            <input type="number" id="bidAmount" placeholder="Cantidad">
+            <button onclick="bid()">Ofertar</button>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/web3@1.3.6/dist/web3.min.js"></script>
     <script src="app.js"></script>
