--- a/index.htm
+++ b/index.htm
@@ -1,50 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>USDT Smart Contract</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>USDT Smart Contract</h1>
-    <section class="stats">
-        <div class="stat">
-            <h2>Tu balance</h2>
-            <p id="userBalance">0 USDT</p>
-        </div>
-        <div class="stat">
-            <h2>Pool del Tesoro</h2>
-            <p id="treasuryPool">0 USDT</p>
-        </div>
-        <div class="stat">
-            <h2>Pool de Subasta</h2>
-            <p id="auctionPool">0 USDT</p>
-        </div>
-    </section>
-    <section class="actions">
-        <div class="container">
-            <h2>Depositar USDT</h2>
-            <input type="number" id="depositAmount" placeholder="Cantidad">
-            <button onclick="deposit()">Depositar</button>
-        </div>
-        <div class="container">
-            <h2>Retirar USDT</h2>
-            <input type="number" id="withdrawAmount" placeholder="Cantidad">
-            <button onclick="withdraw()">Retirar</button>
-        </div>
-        <div class="container">
-            <h2>Reclamar recompensa</h2>
-            <button onclick="claimReward()">Reclamar</button>
-        </div>
-        <div class="container">
-            <h2>Realizar oferta en subasta</h2>
-            <input type="number" id="bidAmount" placeholder="Cantidad">
-            <button onclick="bid()">Ofertar</button>
-        </div>
-    </section>
-
-    <script src="https://cdn.jsdelivr.net/npm/web3@1.3.6/dist/web3.min.js"></script>
+    <title>BNB Treasury</title>
+  </head>
+  <body>
+    <h1>BNB Treasury</h1>
+    <p>Owner: <span id="owner"></span></p>
+    <p>Treasury Pool: <span id="treasury-pool"></span></p>
+    <p>Total Deposits: <span id="total-deposits"></span></p>
+    <form>
+      <label for="deposit-amount">Deposit amount:</label>
+      <input type="text" id="deposit-amount" name="deposit-amount">
+      <button type="button" onclick="deposit()">Deposit</button>
+    </form>
+    <form>
+      <label for="withdraw-amount">Withdraw amount:</label>
+      <input type="text" id="withdraw-amount" name="withdraw-amount">
+      <button type="button" onclick="withdraw()">Withdraw</button>
+    </form>
+    <button type="button" onclick="claimRewards()">Claim Rewards</button>
+    <script src="web3.min.js"></script>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
