--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,8 @@
     <!-- Cargar el archivo de estilos CSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
+<div id="status"></div>
+<button id="connectButton">Connect to Metamask</button>
   <body>
     <div class="container">
       <h1>BNB Treasury</h1>
