--- a/index.htm
+++ b/index.htm
@@ -1,46 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>BNB Treasury</title>
-    <!-- Cargar la biblioteca Web3.js -->
-    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-    <!-- Cargar el archivo de estilos CSS -->
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <title>BNB Treasury Contract Statistics</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
-<div id="status"></div>
-<button id="connectButton">Connect to Metamask</button>
   <body>
     <div class="container">
-      <h1>BNB Treasury</h1>
-      <!-- Formulario de depósito -->
-      <form id="deposit-form">
-        <h2>Depósito</h2>
-        <label>Cantidad:</label>
-        <input type="text" id="deposit-amount">
-        <button type="submit">Depositar</button>
-      </form>
-      <!-- Saldo del fondo de tesorería -->
-      <div class="balance">
-        <h3>Saldo del fondo de tesorería:</h3>
-        <p id="treasury-balance"></p>
+      <h1>BNB Treasury Contract Statistics</h1>
+      <div class="stats">
+        <div class="stat">
+          <h2>Contract Address:</h2>
+          <p>0x1234567890123456789012345678901234567890</p>
+        </div>
+
+        <div class="stat">
+          <h2>Owner:</h2>
+          <p>0x0123456789abcdef0123456789abcdef01234567</p>
+        </div>
+
+        <div class="stat">
+          <h2>Treasury Pool Balance:</h2>
+          <p>1,000 BNB</p>
+        </div>
+
+        <div class="stat">
+          <h2>Last Distribution:</h2>
+          <p>April 5, 2023 at 2:30 PM</p>
+        </div>
+
+        <div class="stat">
+          <h2>Distribution Interval:</h2>
+          <p>24 hours</p>
+        </div>
+
+        <div class="stat">
+          <h2>Withdrawal Fee:</h2>
+          <p>20%</p>
+        </div>
+
+        <div class="stat">
+          <h2>Owner Fee:</h2>
+          <p>5%</p>
+        </div>
+
+        <div class="stat">
+          <h2>Treasury Fee:</h2>
+          <p>95%</p>
+        </div>
+
+        <div class="stat">
+          <h2>Number of Users:</h2>
+          <p>10</p>
+        </div>
+
+        <div class="stat">
+          <h2>Total Deposits:</h2>
+          <p>10,000 BNB</p>
+        </div>
       </div>
-      <!-- Tabla de usuarios -->
-      <table>
-        <thead>
-          <tr>
-            <th>Usuario</th>
-            <th>Depósito</th>
-            <th>Última reclamación</th>
-          </tr>
-        </thead>
-        <tbody id="user-table-body">
-        </tbody>
-      </table>
-      <!-- Mensajes de estado -->
-      <div id="status"></div>
     </div>
-    <!-- Cargar el archivo de scripts JS -->
-    <script src="script.js"></script>
   </body>
 </html>
