--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,8 @@
           <h2>Contract Address:</h2>
           <p>0x1234567890123456789012345678901234567890</p>
         </div>
+<div id="status"></div>
+<button id="connectButton">Connect to Metamask</button>
 
         <div class="stat">
           <h2>Owner:</h2>
