--- a/index.htm
+++ b/index.htm
@@ -12,55 +12,66 @@
       <div class="stats">
         <div class="stat">
           <h2>Contract Address:</h2>
-          <p>0x1234567890123456789012345678901234567890</p>
+          <p id="contractAddress"></p>
         </div>
 
         <div class="stat">
           <h2>Owner:</h2>
-          <p>0x0123456789abcdef0123456789abcdef01234567</p>
+          <p id="ownerAddress"></p>
         </div>
 
         <div class="stat">
           <h2>Treasury Pool Balance:</h2>
-          <p>1,000 BNB</p>
+          <p id="treasuryBalance"></p>
         </div>
 
         <div class="stat">
           <h2>Last Distribution:</h2>
-          <p>April 5, 2023 at 2:30 PM</p>
+          <p id="lastDistribution"></p>
         </div>
 
         <div class="stat">
           <h2>Distribution Interval:</h2>
-          <p>24 hours</p>
+          <p id="distributionInterval"></p>
         </div>
 
         <div class="stat">
           <h2>Withdrawal Fee:</h2>
-          <p>20%</p>
+          <p id="withdrawalFee"></p>
         </div>
 
         <div class="stat">
           <h2>Owner Fee:</h2>
-          <p>5%</p>
+          <p id="ownerFee"></p>
         </div>
 
         <div class="stat">
           <h2>Treasury Fee:</h2>
-          <p>95%</p>
+          <p id="treasuryFee"></p>
         </div>
 
         <div class="stat">
           <h2>Number of Users:</h2>
-          <p>10</p>
+          <p id="numberOfUsers"></p>
         </div>
 
         <div class="stat">
           <h2>Total Deposits:</h2>
-          <p>10,000 BNB</p>
+          <p id="totalDeposits"></p>
         </div>
       </div>
-    </div>
+
+      <div class="actions">
+        <button id="depositButton">Deposit</button>
+        <button id="withdrawButton">Withdraw</button>
+        <button id="claimButton">Claim Rewards</button>
+      </div>
+
+      <div class="animation">
+        <img src="animation.gif" alt="Animation">
+      </div>
+    </div>```
+
 
     <script>
       const connectButton = document.getElementById('connectButton');
