--- a/index.htm
+++ b/index.htm
@@ -1,76 +1,82 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>BNB Treasury Contract Statistics</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My DApp</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/web3@1.0.0/dist/web3.min.js"></script>
+  <script src="app.js"></script>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h1>Welcome to My DApp</h1>
+      <p>Here you can learn about blockchain technology and interact with our smart contract.</p>
+      <button id="connectButton">Connect to Metamask</button>
+    </section>
+
+    <section>
+      <h2>Statistics</h2>
+      <ul>
+        <li>Total Deposits: <span id="totalDeposits"></span></li>
+        <li>User Deposit: <span id="userDeposit"></span></li>
+        <li>Treasury Pool: <span id="treasuryPool"></span></li>
+        <li>Last Distribution: <span id="lastDistribution"></span></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Deposit</h2>
+      <form id="depositForm">
+        <label for="depositAmount">Amount to deposit:</label>
+        <input type="number" id="depositAmount" name="depositAmount" required>
+        <button type="submit" id="depositButton">Deposit</button>
+      </form>
+    </section>
+
+    <section>
+      <h2>Withdraw</h2>
+      <form id="withdrawForm">
+        <label for="withdrawAmount">Amount to withdraw:</label>
+        <input type="number" id="withdrawAmount" name="withdrawAmount" required>
+        <button type="submit" id="withdrawButton">Withdraw</button>
+      </form>
+    </section>
+
+    <section>
+      <h2>Claim Rewards</h2>
+      <button id="claimButton">Claim Rewards</button>
+    </section>
+  </main>
+
+  <footer>
     <div class="container">
-      <h1>BNB Treasury Contract Statistics</h1>
-      <button id="connectButton">Connect with Metamask</button>
-      <div class="stats">
-        <div class="stat">
-          <h2>Contract Address:</h2>
-          <p id="contractAddress"></p>
-        </div>
-
-        <div class="stat">
-          <h2>Owner:</h2>
-          <p id="ownerAddress"></p>
-        </div>
-
-        <div class="stat">
-          <h2>Treasury Pool Balance:</h2>
-          <p id="treasuryBalance"></p>
-        </div>
-
-        <div class="stat">
-          <h2>Last Distribution:</h2>
-          <p id="lastDistribution"></p>
-        </div>
-
-        <div class="stat">
-          <h2>Distribution Interval:</h2>
-          <p id="distributionInterval"></p>
-        </div>
-
-        <div class="stat">
-          <h2>Withdrawal Fee:</h2>
-          <p id="withdrawalFee"></p>
-        </div>
-
-        <div class="stat">
-          <h2>Owner Fee:</h2>
-          <p id="ownerFee"></p>
-        </div>
-
-        <div class="stat">
-          <h2>Treasury Fee:</h2>
-          <p id="treasuryFee"></p>
-        </div>
-
-        <div class="stat">
-          <h2>Number of Users:</h2>
-          <p id="numberOfUsers"></p>
-        </div>
-
-        <div class="stat">
-          <h2>Total Deposits:</h2>
-          <p id="totalDeposits"></p>
-        </div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <div class="social">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
-
-      <div class="actions">
-        <button id="depositButton">Deposit</button>
-        <button id="withdrawButton">Withdraw</button>
-        <button id="claimButton">Claim Rewards</button>
-      </div>
-
-      <div class="animation">
-        <img src="animation.gif" alt="Animation">
-      </div>
-    </div>```
+    </div>
+  </footer>
+</body>
 
 
     <script>
