--- a/index.htm
+++ b/index.htm
@@ -1,33 +1,26 @@
+<!-- Archivo HTML -->
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BNBTreasury01 Contract Interaction</title>
-    <script src="https://cdn.jsdelivr.net/npm/web3@1.3.6/dist/web3.min.js"></script>
-    <script src="./app.js"></script>
+    <meta charset="UTF-8">
+    <title>Mi contrato inteligente</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>BNBTreasury01 Contract Interaction</h1>
-    <div>
-      <label for="address">Contract Address:</label>
-      <input type="text" id="address" value="0x..." />
-    </div>
-    <div>
-      <label for="deposit-amount">Deposit Amount:</label>
-      <input type="text" id="deposit-amount" />
-      <button onclick="deposit()">Deposit</button>
-    </div>
-    <div>
-      <label for="withdraw-amount">Withdraw Amount:</label>
-      <input type="text" id="withdraw-amount" />
-      <button onclick="withdraw()">Withdraw</button>
-    </div>
-    <div>
-      <button onclick="claimRewards()">Claim Rewards</button>
-    </div>
-    <div>
-      <label for="total-deposits">Total Deposits:</label>
-      <span id="total-deposits"></span>
-    </div>
+    <h1>Mi contrato inteligente</h1>
+    <form id="deposit-form">
+      <label for="deposit-amount">Cantidad a depositar:</label>
+      <input type="number" id="deposit-amount" name="deposit-amount" required>
+      <button type="submit">Depositar</button>
+    </form>
+    <form id="withdraw-form">
+      <label for="withdraw-amount">Cantidad a retirar:</label>
+      <input type="number" id="withdraw-amount" name="withdraw-amount" required>
+      <button type="submit">Retirar</button>
+    </form>
+    <button id="claim-rewards-btn">Reclamar recompensas</button>
+    <button id="total-deposits-btn">Total de depósitos</button>
+    <script src="web3.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
-
