--- a/index.htm
+++ b/index.htm
@@ -1,35 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BNB Treasury</title>
-</head>
-<body>
-    <h1>BNB Treasury</h1>
-
-    <h2>Current Treasury Pool: <span id="treasury-pool"></span></h2>
-
-    <form>
-        <label for="deposit-amount">Deposit BNB:</label>
-        <input type="number" id="deposit-amount" name="deposit-amount" required>
-
-        <button type="submit">Deposit</button>
-    </form>
-
-    <form>
-        <label for="withdraw-amount">Withdraw BNB:</label>
-        <input type="number" id="withdraw-amount" name="withdraw-amount" required>
-
-        <button type="submit">Withdraw</button>
-    </form>
-
-    <button id="claim-rewards-btn">Claim Rewards</button>
-
-    <h3>Your Balance: <span id="user-balance"></span></h3>
-    <h3>Your Pending Rewards: <span id="user-rewards"></span></h3>
-
-    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.0/dist/web3.min.js"></script>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Juego Idle</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <h1>Juego Idle</h1>
+        <p>Bienvenido al juego idle. Actualiza tus puntos y gana premios.</p>
+      </header>
+      <main>
+        <section>
+          <h2>Tus puntos</h2>
+          <div class="user-info">
+            <p id="user-points"></p>
+            <button id="update-btn" disabled>Actualizar puntos</button>
+          </div>
+        </section>
+        <section>
+          <h2>Pagar para jugar</h2>
+          <div class="pay-section">
+            <p>Para jugar, debes pagar 0.1 BNB al mes.</p>
+            <p>El pago va al pozo de premios, del cual se reparten premios mensuales.</p>
+            <button id="pay-btn">Pagar</button>
+          </div>
+        </section>
+        <section>
+          <h2>Pozo de premios</h2>
+          <div class="prize-pool">
+            <p id="prize-pool-amount"></p>
+            <button id="withdraw-btn" disabled>Retirar premios</button>
+          </div>
+        </section>
+        <section>
+          <h2>Ranking</h2>
+          <div class="ranking-section">
+            <button id="ranking-btn">Ver ranking</button>
+            <ol id="ranking-list"></ol>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <p>&copy; 2023 Juego Idle. Todos los derechos reservados.</p>
+      </footer>
+    </div>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
+<!-- Modal de carga -->
+<div class="modal" id="loading-modal">
+  <div class="modal-content">
+    <div class="spinner"></div>
+    <p>Cargando...</p>
+  </div>
+</div>
+
+<!-- Modal de error -->
+<div class="modal" id="error-modal">
+  <div class="modal-content">
+    <p>Ha ocurrido un error. Por favor, inténtalo de nuevo.</p>
+    <button id="error-modal-btn">Aceptar</button>
+  </div>
+</div>
+<!-- Modal de pago -->
+<div class="modal" id="pay-modal">
+  <div class="modal-content">
+    <p>Para jugar debes pagar 0.1 BNB al mes.</p>
+    <button id="pay-modal-confirm-btn">Confirmar pago</button>
+    <button id="pay-modal-cancel-btn">Cancelar</button>
+  </div>
+</div>
+<!-- Modal de confirmación de pago -->
+<div class="modal" id="pay-confirmation-modal">
+  <div class="modal-content">
+    <p>Pago realizado correctamente. ¡Ya puedes jugar!</p>
+    <button id="pay-confirmation-modal-btn">Aceptar</button>
+  </div>
+</div>
+
+<!-- Modal de premios -->
+<div class="modal" id="prize-modal">
+  <div class="modal-content">
+    <p>Has ganado <span id="prize-amount"></span> BNB.</p>
+    <button id="prize-modal-btn">Aceptar</button>
+  </div>
+</div>
+<!-- Modal de ranking -->
+<div class="modal" id="ranking-modal">
+  <div class="modal-content">
+    <h3>Ranking</h3>
+    <ol id="ranking-modal-list"></ol>
+    <button id="ranking-modal-btn">Aceptar</button>
+  </div>
+</div>
+<!-- Modal de actualización de puntos -->
+<div class="modal" id="update-modal">
+  <div class="modal-content">
+    <p>¿Cuántos puntos quieres actualizar?</p>
+    <input type="number" id="update-input" min="0" required />
+    <button id="update-modal-confirm-btn">Actualizar</button>
+    <button id="update-modal-cancel-btn">Cancelar</button>
+  </div>
+</div>
+<!-- Modal de confirmación de actualización de puntos -->
+<div class="modal" id="update-confirmation-modal">
+  <div class="modal-content">
+    <p>Puntos actualizados correctamente.</p>
+    <button id="update-confirmation-modal-btn">Aceptar</button>
+  </div>
+</div>
+<!-- Modal de confirmación de retiro de premios -->
+<div class="modal" id="withdraw-confirmation-modal">
+  <div class="modal-content">
+    <p>Premios retirados correctamente.</p>
+    <button id="withdraw-confirmation-modal-btn">Aceptar</button>
+  </div>
+</div>
+<!-- Modals de error -->
+<div class="modal" id="missing-wallet-modal">
+  <div class="modal-content">
+    <p>No se ha detectado ninguna cartera. Por favor, instala una y vuelve a intentarlo.</p>
+    <button id="missing-wallet-modal-btn">Aceptar</button>
+  </div>
+</div>
+
+<div class="modal" id="insufficient-balance-modal">
+  <div class="modal-content">
+    <p>No tienes suficiente saldo para realizar esta acción.</p>
+    <button id="insufficient-balance-modal-btn">Aceptar</button>
+  </div>
+</div>
+<div class="modal" id="connection-error-modal">
+  <div class="modal-content">
+    <p>No se ha podido establecer conexión con la red de Binance Smart Chain. Por favor, inténtalo de nuevo más tarde.</p>
+    <button id="connection-error-modal-btn">Aceptar</button>
+  </div>
+</div>
+
