--- a/index.htm
+++ b/index.htm
@@ -1,48 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>BSC Smart Contract Demo</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-    <h1>BSC Smart Contract Demo</h1>
-    <div id="balance-container">
-        <h2>Your Balance:</h2>
-        <span id="balance"></span> BNB
-    </div>
-    <div id="pool-container">
-        <h2>Pool Information:</h2>
-        <div id="pool-balance-container">
-            <h3>Pool Balance:</h3>
-            <span id="pool-balance"></span> BNB
+    <head>
+        <meta charset="UTF-8">
+        <title>BNB Pool</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <h1>BNB Pool</h1>
+        <div id="balance-container">
+            <h2>Your Balance: <span id="balance"></span> BNB</h2>
+            <form id="deposit-form">
+                <label>Deposit BNB:</label>
+                <input type="number" id="deposit-amount" step="0.01" min="0">
+                <button type="submit">Deposit</button>
+            </form>
+            <form id="withdraw-form">
+                <label>Withdraw BNB:</label>
+                <input type="number" id="withdraw-amount" step="0.01" min="0">
+                <button type="submit">Withdraw</button>
+            </form>
         </div>
-        <div id="pool-distribution-container">
-            <h3>Pool Distribution:</h3>
-            <ul id="pool-distribution-list">
-                <li>Address 1: <span class="pool-share"></span>%</li>
-                <li>Address 2: <span class="pool-share"></span>%</li>
-                <li>Address 3: <span class="pool-share"></span>%</li>
-                <!-- Add more list items for additional addresses -->
-            </ul>
+        <div id="pool-container">
+            <h2>Pool Balance: <span id="pool-balance"></span> BNB</h2>
+            <button id="distribute-button">Distribute Pool</button>
+            <div id="pool-distribution-container">
+                <h3>Pool Distribution:</h3>
+                <ul id="pool-distribution-list">
+                    <!-- Pool distribution items will be added here -->
+                </ul>
+            </div>
         </div>
-    </div>
-    <form id="deposit-form">
-        <h2>Deposit BNB:</h2>
-        <label for="deposit-amount">Amount:</label>
-        <input type="number" id="deposit-amount" name="deposit-amount" min="0" step="0.01" required>
-        <button type="submit">Deposit</button>
-    </form>
-    <form id="withdraw-form">
-        <h2>Withdraw BNB:</h2>
-        <label for="withdraw-amount">Amount:</label>
-        <input type="number" id="withdraw-amount" name="withdraw-amount" min="0" step="0.01" required>
-        <button type="submit">Withdraw</button>
-    </form>
-    <button id="distribute-button" type="button">Distribute Pool</button>
-
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="web3.min.js"></script>
-    <script src="app.js"></script>
-</body>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="./web3.min.js"></script>
+        <script src="./app.js"></script>
+    </body>
 </html>
